# binc_cmake_example

./: CMakeLists.txt  main.cpp
